<resources>
    <string name="app_name">Hetty</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_items">Items</string>
    <string name="menu_warehousetracking">Warehouse Tracking</string>
    <string name="menu_salesorder">Sales Order</string>
    <string name="menu_purchaseorder">Purchase Order </string>
    <string name="menu_settings">Account Settings</string>
    <string name="product_name">Product Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="sales_quantity">Sales Quantity</string>
    <string name="sales_date">Sales Date</string>
    <string name="default_price">00.00</string>
    <string name="note">Note :</string>
    <string name="sales_price">Sales Price</string>
    <string name="sales_type">Sales Payment Type</string>
    <string name="imageDescription" />
    <string name="quantity_invoiced">Invoiced</string>
    <string name="packed">Packed</string>
    <string name="shipped">Shipped</string>
    <string name="sort">Sort</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tracking_page">TrackingPage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="warehouse_activity">Warehouse Activity</string>
    <string name="to_be_pending">Quantity to be pending</string>
    <string name="to_be_packed">Quantity to be packed</string>
    <string name="to_be_shipped">Packages to be shipped</string>
    <string name="to_be_delivered">Packages to be delivered</string>
    <string name="to_be_invoiced">Quantity to be invoiced</string>
    <string name="inventory_summary">Inventory Summary</string>
    <string name="in_hand">In hand</string>
    <string name="to_be_received">To be received</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="product_barcode">Product Barcode</string>
    <string name="product_color">Product Color</string>
    <string name="change_criteria">Change Criteria</string>
    <string name="product_image">Product Image</string>
    <string name="product_size">Product Size</string>
    <string name="product_desc">Product Description</string>
    <string name="do_you_need_low_stock_alert_on_this_product">Do you need low stock Alert on this product ?</string>
    <string name="minimum_quantity_for_alert">Minimum quantity for alert</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="staff_name">Staff Name</string>
    <string name="staff_image">Staff Image</string>
    <string name="staff_gender">Staff Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="staff_address">Staff Address</string>
    <string name="staff_phone_number">Staff Phone Number (Default-Password)</string>
    <string name="staff_email_address">Staff Email Address</string>
    <string name="staff_position">Staff Position</string>
    <string name="staff_joined_date">Staff Joined Date</string>
    <string name="product_id">Product ID</string>
    <string name="purchase_quantity">Purchase Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="submit">SUBMIT</string>
    <string name="request_date">Request Date</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="supplier_contact">Supplier Contact</string>
    <string name="purchase_search">Enter Purchase ID or Supplier Name</string>
    <string name="search">SEARCH</string>
    <string name="done">DONE</string>
    <string name="purchase_id">Purchase ID</string>
    <string name="edit">EDIT</string>
    <string name="status">Status</string>
    <string name="save">SAVE</string>
    <string name="received_date">Received Date</string>
    <string name="choose_d_o_b">Choose D.O.B</string>
    <string name="choose_joined_date">Choose Joined Date</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="update_confirmation">Are you sure you want to update?</string>
    <string name="create_confirmation">Are you sure you want to create?</string>
    <string name="received_confirmation">Are you sure you want to receive?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="total_cost_rm">Total Cost (RM)</string>
    <string name="cost_per_unit_rm">Cost Per Unit (RM)</string>
    <string name="accepted_date">Accepted Date</string>
    <string name="delivered_date">Delivered Date</string>
    <string name="received">received</string>
    <string name="default_costPerUnit">0.00</string>
    <string name="pur_telephone">07-123456</string>
    <string name="request_date_recycler">Request Date :</string>
    <string name="myFragmentShowProduct">myFragmentShowProduct</string>
    <string name="quantity_to_be_prepared">Quantity to be prepared</string>
    <string name="staff_id">Staff ID</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="product">Product</string>
    <string name="report">Report</string>
</resources>